--- a/index.html
+++ b/index.html
@@ -7,14 +7,9 @@
     <title>废物回收</title>
 
     <link
-      href="https://fonts.googleapis.com/css2?family=ZCOOL+XiaoWei&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@200..900&family=Playwrite+AU+QLD:wght@100..400&display=swap"
       rel="stylesheet"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Playwrite+AU+QLD:wght@100..400&display=swap"
-      rel="stylesheet"
-    />
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
