--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <script
+      defer
+      src="https://umami.rote.ink/script.js"
+      data-website-id="b8fe8467-0c61-47c0-b00b-5a6d6a1c92c9"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
